--- a/learning_pandas.ipynb
+++ b/learning_pandas.ipynb
@@ -1302,366 +1302,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "447c6a14-fd82-4ce4-b121-833d92a209b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (325050480.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[46], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    fake = 'C:\\Users\\MUNAWAR\\Desktop\\pandas\\fakename.csv'\u001b[0m\n\u001b[1;37m                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
-     ]
-    }
-   ],
-   "source": [
-    "fake = 'C:\\Users\\MUNAWAR\\Desktop\\pandas\\fakename.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "9f350f21-b5c3-4f82-8be1-a12501111607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fake = 'C:/Users/MUNAWAR/Desktop/pandas/fakename.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "062c2782-a91c-42a6-8cce-7d9c76179591",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fakedata = pd.read_csv(fake)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "ba6dc672-09d1-4640-9f4a-b4c2816f20fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Id      Name   Label\n",
-      "0   1      John       1\n",
-      "1   2     David       0\n",
-      "2   3    Samuel       0\n",
-      "3   4   Gabrial       1\n",
-      "4   5     Luffy       1\n",
-      "5   6      Mark       0\n",
-      "6   7   Joffrey       1\n",
-      "7   8     Ronin       1\n",
-      "8   9      Alex       0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(fakedata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "c05f481f-b13a-4135-9b8e-d66f44507966",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.555556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2.738613</td>\n",
-       "      <td>0.527046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Id     Label\n",
-       "count  9.000000  9.000000\n",
-       "mean   5.000000  0.555556\n",
-       "std    2.738613  0.527046\n",
-       "min    1.000000  0.000000\n",
-       "25%    3.000000  0.000000\n",
-       "50%    5.000000  1.000000\n",
-       "75%    7.000000  1.000000\n",
-       "max    9.000000  1.000000"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fakedata.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "3cf7b314-93fe-499b-acf1-76f311320e1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fakedata = pd.read_csv(fake)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "85626c59-902a-4017-9b04-a6ef2eaeebd7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>20.888889</td>\n",
-       "      <td>0.555556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2.738613</td>\n",
-       "      <td>1.900292</td>\n",
-       "      <td>0.527046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>22.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Id        Age     Label\n",
-       "count  9.000000   9.000000  9.000000\n",
-       "mean   5.000000  20.888889  0.555556\n",
-       "std    2.738613   1.900292  0.527046\n",
-       "min    1.000000  18.000000  0.000000\n",
-       "25%    3.000000  20.000000  0.000000\n",
-       "50%    5.000000  21.000000  1.000000\n",
-       "75%    7.000000  22.000000  1.000000\n",
-       "max    9.000000  24.000000  1.000000"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fakedata.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "56a7dfc8-8831-487c-9853-b4b14dd50dc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "9365b274-8f9d-4923-ba85-f940e0e50df7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Id      Name   Age   Label\n",
-      "0   1      John    21       1\n",
-      "1   2     David    19       0\n",
-      "2   3    Samuel    20       0\n",
-      "3   4   Gabrial    22       1\n",
-      "4   5     Luffy    23       1\n",
-      "5   6      Mark    20       0\n",
-      "6   7   Joffrey    21       1\n",
-      "7   8     Ronin    24       1\n",
-      "8   9      Alex    18       0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(fakedata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "677fd597-9091-4313-baa6-f18900289cff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydataset = {\n",
-    "  'cars': [\"BMW\", \"Volvo\", \"Ford\"],\n",
-    "  'passings': [3, 7, 2]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "89a09e04-9da9-4e31-890d-64929e1b7db2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myvar = pd.DataFrame(mydataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "0c2d7464-f3b3-49e5-a3dc-0e57385a33d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    cars  passings\n",
-      "0    BMW         3\n",
-      "1  Volvo         7\n",
-      "2   Ford         2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(myvar)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 64,
    "id": "28f76031-d62c-4499-9d3f-405da312d25b",
    "metadata": {},
@@ -1689,28 +1329,6 @@
     "  \"calories\": [420, 380, 390],\n",
     "  \"duration\": [50, 40, 45]\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "949b0970-75a4-4f73-8ef8-d43ad056a08b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\MUNAWAR\\Desktop\\pandas\\learning_pandas.ipynb Cell 38\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/MUNAWAR/Desktop/pandas/learning_pandas.ipynb#X52sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m result \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(data)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "result = pd.DataFrame(data)"
    ]
   },
   {
@@ -1773,21 +1391,13 @@
    "source": [
     "data = pd.read_csv(new)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b1ae59f-fccc-45f1-85c7-0eae0affb8c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1799,7 +1409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
