--- a/DataFrame.ipynb
+++ b/DataFrame.ipynb
@@ -577,8 +577,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "70cf1f8f-f5f5-48de-aa03-44087a24f238",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(   Id      Name  Gender   Age   Label  Gender\n",
+       " 0   1      John    Male    21       1     NaN\n",
+       " 1   2     David    Male    19       0     NaN\n",
+       " 2   3    Samuel    Male    20       0     NaN\n",
+       " 3   4   Gabrial    Male    22       1     NaN\n",
+       " 4   5     Luffy    Male    23       1     NaN\n",
+       " 5   6      Mark    Male    20       0     NaN\n",
+       " 6   7   Joffrey    Male    21       1     NaN\n",
+       " 7   8     Ronin    Male    24       1     NaN\n",
+       " 8   9      Alex    Male    18       0     NaN,\n",
+       "    Id      Name  Gender   Age   Label  Gender Horse\n",
+       " 0   1      John    Male    21       1     NaN    No\n",
+       " 1   2     David    Male    19       0     NaN    No\n",
+       " 2   3    Samuel    Male    20       0     NaN    No\n",
+       " 3   4   Gabrial    Male    22       1     NaN    No\n",
+       " 4   5     Luffy    Male    23       1     NaN    No\n",
+       " 5   6      Mark    Male    20       0     NaN    No\n",
+       " 6   7   Joffrey    Male    21       1     NaN    No\n",
+       " 7   8     Ronin    Male    24       1     NaN    No\n",
+       " 8   9      Alex    Male    18       0     NaN    No)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data, data2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02911a1-c4fe-4e86-bab9-cbc5cabbd46a",
    "metadata": {},
    "outputs": [],
    "source": []
