--- a/count_data.ipynb
+++ b/count_data.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "541088dd-a174-456f-890c-aab0b06e7846",
    "metadata": {
     "tags": []
@@ -219,10 +219,87 @@
     {
      "data": {
       "text/plain": [
-       "16"
+       "0      60\n",
+       "1      60\n",
+       "2      60\n",
+       "3      45\n",
+       "4      45\n",
+       "       ..\n",
+       "164    60\n",
+       "165    60\n",
+       "166    60\n",
+       "167    75\n",
+       "168    75\n",
+       "Name: Duration, Length: 169, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Duration']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6458bc01-35f9-4060-8f23-a670fdaa4a9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      110\n",
+       "1      117\n",
+       "2      103\n",
+       "3      109\n",
+       "4      117\n",
+       "      ... \n",
+       "164    105\n",
+       "165    110\n",
+       "166    115\n",
+       "167    120\n",
+       "168    125\n",
+       "Name: Pulse, Length: 169, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Pulse']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3f2fa58c-b16a-4a08-b049-2c0b4cc12f5b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      60\n",
+       "1      60\n",
+       "2      60\n",
+       "3      45\n",
+       "4      45\n",
+       "       ..\n",
+       "164    60\n",
+       "165    60\n",
+       "166    60\n",
+       "167    75\n",
+       "168    75\n",
+       "Name: Duration, Length: 169, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6458bc01-35f9-4060-8f23-a670fdaa4a9a",
+   "id": "ca8f78ec-29e8-4283-9464-87b0197c80d4",
    "metadata": {},
    "outputs": [],
    "source": []
