payment-dataset created and preprocessed

--- a/DataFrame.ipynb
+++ b/DataFrame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "ab18e14d-ec6a-438e-af0a-0672d8d78abc",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "8   9      Alex    18       0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_csv('fakename.csv')\n",
+    "data = pd.read_csv('dataset/fakename.csv')\n",
     "data"
    ]
   },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "id": "aee2f325-7abe-499a-92ff-21ce5755059a",
    "metadata": {
     "tags": []
@@ -171,7 +171,6 @@
        "      <th>Name</th>\n",
        "      <th>Age</th>\n",
        "      <th>Label</th>\n",
-       "      <th>Gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -181,7 +180,6 @@
        "      <td>John</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -189,7 +187,6 @@
        "      <td>David</td>\n",
        "      <td>19</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -197,7 +194,6 @@
        "      <td>Samuel</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -205,7 +201,6 @@
        "      <td>Gabrial</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -213,7 +208,6 @@
        "      <td>Luffy</td>\n",
        "      <td>23</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -221,7 +215,6 @@
        "      <td>Mark</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -229,7 +222,6 @@
        "      <td>Joffrey</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -237,7 +229,6 @@
        "      <td>Ronin</td>\n",
        "      <td>24</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -245,26 +236,25 @@
        "      <td>Alex</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Id      Name   Age   Label  Gender\n",
-       "0   1      John    21       1     NaN\n",
-       "1   2     David    19       0     NaN\n",
-       "2   3    Samuel    20       0     NaN\n",
-       "3   4   Gabrial    22       1     NaN\n",
-       "4   5     Luffy    23       1     NaN\n",
-       "5   6      Mark    20       0     NaN\n",
-       "6   7   Joffrey    21       1     NaN\n",
-       "7   8     Ronin    24       1     NaN\n",
-       "8   9      Alex    18       0     NaN"
+       "   Id      Name   Age   Label\n",
+       "0   1      John    21       1\n",
+       "1   2     David    19       0\n",
+       "2   3    Samuel    20       0\n",
+       "3   4   Gabrial    22       1\n",
+       "4   5     Luffy    23       1\n",
+       "5   6      Mark    20       0\n",
+       "6   7   Joffrey    21       1\n",
+       "7   8     Ronin    24       1\n",
+       "8   9      Alex    18       0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "003ec7a6-fb65-454c-9c67-f433fcf7510e",
    "metadata": {
     "tags": []
@@ -307,7 +297,6 @@
        "      <th>Gender</th>\n",
        "      <th>Age</th>\n",
        "      <th>Label</th>\n",
-       "      <th>Gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -318,7 +307,6 @@
        "      <td>Male</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -327,7 +315,6 @@
        "      <td>Male</td>\n",
        "      <td>19</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -336,7 +323,6 @@
        "      <td>Male</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -345,7 +331,6 @@
        "      <td>Male</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -354,7 +339,6 @@
        "      <td>Male</td>\n",
        "      <td>23</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -363,7 +347,6 @@
        "      <td>Male</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -372,7 +355,6 @@
        "      <td>Male</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -381,7 +363,6 @@
        "      <td>Male</td>\n",
        "      <td>24</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -390,26 +371,25 @@
        "      <td>Male</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Id      Name  Gender   Age   Label  Gender\n",
-       "0   1      John    Male    21       1     NaN\n",
-       "1   2     David    Male    19       0     NaN\n",
-       "2   3    Samuel    Male    20       0     NaN\n",
-       "3   4   Gabrial    Male    22       1     NaN\n",
-       "4   5     Luffy    Male    23       1     NaN\n",
-       "5   6      Mark    Male    20       0     NaN\n",
-       "6   7   Joffrey    Male    21       1     NaN\n",
-       "7   8     Ronin    Male    24       1     NaN\n",
-       "8   9      Alex    Male    18       0     NaN"
+       "   Id      Name Gender   Age   Label\n",
+       "0   1      John   Male    21       1\n",
+       "1   2     David   Male    19       0\n",
+       "2   3    Samuel   Male    20       0\n",
+       "3   4   Gabrial   Male    22       1\n",
+       "4   5     Luffy   Male    23       1\n",
+       "5   6      Mark   Male    20       0\n",
+       "6   7   Joffrey   Male    21       1\n",
+       "7   8     Ronin   Male    24       1\n",
+       "8   9      Alex   Male    18       0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "6751e94f-61a8-4a19-9dd8-39dbab1e97b2",
    "metadata": {
     "tags": []
@@ -453,7 +433,6 @@
        "      <th>Gender</th>\n",
        "      <th>Age</th>\n",
        "      <th>Label</th>\n",
-       "      <th>Gender</th>\n",
        "      <th>Horse</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -465,7 +444,6 @@
        "      <td>Male</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -475,7 +453,6 @@
        "      <td>Male</td>\n",
        "      <td>19</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -485,7 +462,6 @@
        "      <td>Male</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -495,7 +471,6 @@
        "      <td>Male</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -505,7 +480,6 @@
        "      <td>Male</td>\n",
        "      <td>23</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -515,7 +489,6 @@
        "      <td>Male</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -525,7 +498,6 @@
        "      <td>Male</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -535,7 +507,6 @@
        "      <td>Male</td>\n",
        "      <td>24</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -545,7 +516,6 @@
        "      <td>Male</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -553,19 +523,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Id      Name  Gender   Age   Label  Gender Horse\n",
-       "0   1      John    Male    21       1     NaN    No\n",
-       "1   2     David    Male    19       0     NaN    No\n",
-       "2   3    Samuel    Male    20       0     NaN    No\n",
-       "3   4   Gabrial    Male    22       1     NaN    No\n",
-       "4   5     Luffy    Male    23       1     NaN    No\n",
-       "5   6      Mark    Male    20       0     NaN    No\n",
-       "6   7   Joffrey    Male    21       1     NaN    No\n",
-       "7   8     Ronin    Male    24       1     NaN    No\n",
-       "8   9      Alex    Male    18       0     NaN    No"
+       "   Id      Name Gender   Age   Label Horse\n",
+       "0   1      John   Male    21       1    No\n",
+       "1   2     David   Male    19       0    No\n",
+       "2   3    Samuel   Male    20       0    No\n",
+       "3   4   Gabrial   Male    22       1    No\n",
+       "4   5     Luffy   Male    23       1    No\n",
+       "5   6      Mark   Male    20       0    No\n",
+       "6   7   Joffrey   Male    21       1    No\n",
+       "7   8     Ronin   Male    24       1    No\n",
+       "8   9      Alex   Male    18       0    No"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "70cf1f8f-f5f5-48de-aa03-44087a24f238",
    "metadata": {
     "tags": []
@@ -586,29 +556,29 @@
     {
      "data": {
       "text/plain": [
-       "(   Id      Name  Gender   Age   Label  Gender\n",
-       " 0   1      John    Male    21       1     NaN\n",
-       " 1   2     David    Male    19       0     NaN\n",
-       " 2   3    Samuel    Male    20       0     NaN\n",
-       " 3   4   Gabrial    Male    22       1     NaN\n",
-       " 4   5     Luffy    Male    23       1     NaN\n",
-       " 5   6      Mark    Male    20       0     NaN\n",
-       " 6   7   Joffrey    Male    21       1     NaN\n",
-       " 7   8     Ronin    Male    24       1     NaN\n",
-       " 8   9      Alex    Male    18       0     NaN,\n",
-       "    Id      Name  Gender   Age   Label  Gender Horse\n",
-       " 0   1      John    Male    21       1     NaN    No\n",
-       " 1   2     David    Male    19       0     NaN    No\n",
-       " 2   3    Samuel    Male    20       0     NaN    No\n",
-       " 3   4   Gabrial    Male    22       1     NaN    No\n",
-       " 4   5     Luffy    Male    23       1     NaN    No\n",
-       " 5   6      Mark    Male    20       0     NaN    No\n",
-       " 6   7   Joffrey    Male    21       1     NaN    No\n",
-       " 7   8     Ronin    Male    24       1     NaN    No\n",
-       " 8   9      Alex    Male    18       0     NaN    No)"
+       "(   Id      Name Gender   Age   Label\n",
+       " 0   1      John   Male    21       1\n",
+       " 1   2     David   Male    19       0\n",
+       " 2   3    Samuel   Male    20       0\n",
+       " 3   4   Gabrial   Male    22       1\n",
+       " 4   5     Luffy   Male    23       1\n",
+       " 5   6      Mark   Male    20       0\n",
+       " 6   7   Joffrey   Male    21       1\n",
+       " 7   8     Ronin   Male    24       1\n",
+       " 8   9      Alex   Male    18       0,\n",
+       "    Id      Name Gender   Age   Label Horse\n",
+       " 0   1      John   Male    21       1    No\n",
+       " 1   2     David   Male    19       0    No\n",
+       " 2   3    Samuel   Male    20       0    No\n",
+       " 3   4   Gabrial   Male    22       1    No\n",
+       " 4   5     Luffy   Male    23       1    No\n",
+       " 5   6      Mark   Male    20       0    No\n",
+       " 6   7   Joffrey   Male    21       1    No\n",
+       " 7   8     Ronin   Male    24       1    No\n",
+       " 8   9      Alex   Male    18       0    No)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,8 +589,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "f02911a1-c4fe-4e86-bab9-cbc5cabbd46a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>John</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>David</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Gabrial</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Luffy</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Joffrey</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Ronin</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Alex</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id      Name   Age   Label\n",
+       "0   1      John    21       1\n",
+       "1   2     David    19       0\n",
+       "2   3    Samuel    20       0\n",
+       "3   4   Gabrial    22       1\n",
+       "4   5     Luffy    23       1\n",
+       "5   6      Mark    20       0\n",
+       "6   7   Joffrey    21       1\n",
+       "7   8     Ronin    24       1\n",
+       "8   9      Alex    18       0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('dataset/fakename.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4db05f0a-faf7-4a67-84d2-6b884792df9b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Id      Name   Age   Label\n",
+      "0   1      John    21       1\n",
+      "1   2     David    19       0\n",
+      "2   3    Samuel    20       0\n",
+      "3   4   Gabrial    22       1\n",
+      "4   5     Luffy    23       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4f93240-d0d3-4d32-af81-8885a2fe4099",
    "metadata": {},
    "outputs": [],
    "source": []
